Examples: better first folio title

--- a/examples/first-folio.html
+++ b/examples/first-folio.html
@@ -8,7 +8,7 @@
             <meta http-equiv="imagetoolbar" content="no">
         <![endif]-->
         <title>
-            WDL Book Viewer example
+            WDL Viewer example: The First Folio of Shakespeare
         </title>
         <link rel="stylesheet" href="../build/wdl-viewer.css" type="text/css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
