Hide rotation controls on unsupported browsers
Now the rotation buttons are only added on browsers which support at
least one of the rotated view modes (OpenSeadragon with the canvas
renderer or the page view using CSS transforms) and they will be hidden
on the appropriate view when the current browser only supports one mode.

--- a/examples/first-folio.html
+++ b/examples/first-folio.html
@@ -81,6 +81,18 @@
                                         <kbd>Page Up</kbd>, <kbd>shift+spacebar</kbd>, <kbd>k</kbd>
                                     </td>
                                 </tr>
+                                <tr class="requires-rotation">
+                                    <th>Rotate Left</th>
+                                    <td>
+                                        <kbd>alt+left arrow</kbd>
+                                    </td>
+                                </tr>
+                                <tr class="requires-rotation">
+                                    <th>Rotate Right</th>
+                                    <td>
+                                        <kbd>alt+right arrow</kbd>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <th>
                                         Switch to grid view
@@ -285,7 +297,6 @@
             }).trigger("resize");
 
             if (bookmark) {
-                console.log(bookmark);
                 $viewer.trigger("goto-page", [bookmark[1], bookmark[2]]);
             }
         </script>
