Restore facing page support
The switch away from wrapped pages was clobbered by a merge

--- a/examples/first-folio.html
+++ b/examples/first-folio.html
@@ -25,7 +25,7 @@
             </header>
             <div id="viewport">
                 <div id="pages">
-                    <div class="current"><img alt="" src="http://content.wdl.org/11290/service/thumbnail/1024x1024/1/1.jpg"></div>
+                    <img class="current" alt="" src="http://content.wdl.org/11290/service/thumbnail/1024x1024/1/1.jpg">
                 </div>
             </div>
             <footer>
