--- a/examples/ptolemy.html
+++ b/examples/ptolemy.html
@@ -25,7 +25,7 @@
             </header>
             <div id="viewport">
                 <div id="pages">
-                    <div class="current"><img alt="" src="http://lcweb2.loc.gov/service/rbc/rbc0001/2013/2013vollb40724/0000q.jpg"></div>
+                    <img class="current" src="http://lcweb2.loc.gov/service/rbc/rbc0001/2013/2013vollb40724/0000q.jpg">
                 </div>
             </div>
             <footer>
