Wrap page images to allow overlay effects
Overlays will require a position:relative wrapper, which this change
adds with the necessary CSS and JS structural changes.

--- a/examples/ptolemy.html
+++ b/examples/ptolemy.html
@@ -25,7 +25,9 @@
             </header>
             <div id="viewport">
                 <div id="pages">
-                    <img class="current" src="http://lcweb2.loc.gov/service/rbc/rbc0001/2013/2013vollb40724/0000q.jpg">
+                    <div class="page current">
+                        <img src="http://lcweb2.loc.gov/service/rbc/rbc0001/2013/2013vollb40724/0000q.jpg">
+                    </div>
                 </div>
             </div>
             <footer>
