--- a/examples/first-folio.html
+++ b/examples/first-folio.html
@@ -25,7 +25,9 @@
             </header>
             <div id="viewport">
                 <div id="pages">
-                    <img class="current" alt="" src="http://content.wdl.org/11290/service/thumbnail/1024x1024/1/1.jpg">
+                    <div class="current page">
+                        <img alt="" src="http://content.wdl.org/11290/service/thumbnail/1024x1024/1/1.jpg">
+                    </div>
                 </div>
             </div>
             <footer>
