Examples: update replaceState polyfill to work with anchors
This avoids a problem on old browsers when the page URL 
stores the volume / page in the fragment rather than either
the path or query string which normally doesn’t trigger 
navigation when the user clicks on a link which is otherwise
the same URL.

--- a/examples/ptolemy.html
+++ b/examples/ptolemy.html
@@ -188,6 +188,12 @@
                                     document.location.href = url;
                                 }
                             }
+
+                            // Force page navigation rather than simply updating the current anchor:
+                            $('.next.page, .previous.page').on('click', function (evt) {
+                                document.location.href = this.href;
+                                document.location.reload();
+                            })
                         } else {
                             $(".next.page").on("click", function () {
                                 $viewer.trigger("goto-next-page"); return false;
