Examples: add missing Modernizr fullscreen test
Thanks to Eben English for pointing out that the CDNJS version of
Modernizr does not include the Fullscreen API test.

--- a/examples/first-folio.html
+++ b/examples/first-folio.html
@@ -179,6 +179,8 @@
         <script src="../external/openseadragon/build/openseadragon/openseadragon.js"></script>
         <script src="../src/js/wdl-viewer.js"></script>
         <script>
+            Modernizr.addTest('fullscreen', !!(Modernizr.prefixed('exitFullscreen', document, false) || Modernizr.prefixed('cancelFullScreen', document, false)));
+
             Modernizr.load([
                 {
                     test: Modernizr.inputtypes.range && Modernizr.history,
