--- a/examples/ptolemy.html
+++ b/examples/ptolemy.html
@@ -161,6 +161,8 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
         <script src="../src/js/wdl-viewer.js"></script>
         <script>
+            Modernizr.addTest('fullscreen', !!(Modernizr.prefixed('exitFullscreen', document, false) || Modernizr.prefixed('cancelFullScreen', document, false)));
+
             Modernizr.load([
                 {
                     test: Modernizr.inputtypes.range && Modernizr.history,
