--- a/examples/ptolemy.html
+++ b/examples/ptolemy.html
@@ -12,6 +12,8 @@
         </title>
         <link rel="stylesheet" href="../build/wdl-viewer.css" type="text/css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     </head>
     <body class="wdl-viewer">
         <!-- http://memory.loc.gov/cgi-bin/image-services/jp2.py?data=/home/www/data/gmd/gmd3m/g3200m/g3200m/gct00262/ca000002.jp2&res= -->
@@ -33,7 +35,7 @@
             <footer>
                 <nav class="toolbar">
                     <div class="item-detail-nav">
-                        <a href="/en/item/1/">Item Detail</a>
+                        <a href="http://lccn.loc.gov/48040724">Item Detail</a>
                     </div>
                     <label class="group">
                         Volume
@@ -44,7 +46,26 @@
                         </select>
                     </label>
                     <div class="index">
-                        <label>Page <input type="number" disabled class="current-index" value="1" min="1" max="1" step="1"></label> <label class="max-index-label">of <span class="max-index">1</span></label> <input disabled id="index" type="range" value="1" min="1" max="1" step="1"> <a class="page previous disabled">Previous</a> <a class="page next disabled">Next</a>
+                        <label>
+                            Page
+                            <input type="number" disabled class="current-index" value="1" min="1" max="238" step="1">
+                        </label>
+                        <label class="max-index-label">
+                            of
+                            <span class="max-index">1</span>
+                        </label>
+
+                        <input disabled id="index" type="range" value="1" min="1" max="1" step="1">
+
+                        <a class="control page previous disabled">
+                            <span class="fa fa-chevron-circle-left"></span>
+                            <span class="title">Previous</span>
+                        </a>
+
+                        <a class="control page next disabled">
+                            <span class="title">Next</span>
+                            <span class="fa fa-chevron-circle-right"></span>
+                        </a>
                     </div>
                     <div class="controls"></div>
                 </nav>
@@ -274,11 +295,21 @@
 
             var $window = $(window),
                 $viewer = $("#viewer").wdlViewer({
-                    pageGroups: {"1": 461}, // List of groups and the last index value in each
+                    pageGroups: {'1': 238}, // List of groups and the last index value in each
                     pageUrlTemplate: "ptolemy.html#{group}/{index}",
                     imageUrlTemplate: generateImageUrl,
                     placeholderSrc: "http://content.wdl.org/placeholder/308x255.png",
-                    initialView: "page"
+                    initialView: 'page',
+                    forceSinglePageDisplay: function (group, index) {
+                        // Display the initial color chart, spine and covers as single pages
+                        if (index < 4) {
+                            return true;
+                        } else if (index > 236) {
+                            return true
+                        } else {
+                            return false;
+                        }
+                    }
                 });
 
             $("input,select").removeAttr("disabled");
